[package]
name = "runseal"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "GitHub Actions security wrapper for nono sandboxed credential use"

[[bin]]
name = "runseal"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
tempfile = "3"
